# static-vs-dynamic

./: Cargo.toml  README.md
src/: bench.rs  dyn_traits.rs  lib.rs  main.rs  no_traits.rs  static_traits.rs
